--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="log2">log2</string>
     <string name="rad">rad</string>
     <string name="graphique">Graphique</string>
+    <string name="textGraph">Sin(x)</string>
 </resources>
