--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="_0">0</string>
     <string name="vir">,</string>
     <string name="ega">=</string>
-    <string name="calc">0</string>
+    <string name="calc"></string>
     <string name="historique">Historique</string>
     <string name="todo">TODO</string>
     <string name="log">log</string>
