--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Calcul</string>
-    <string name="result">0</string>
+    <string name="result"></string>
     <string name="c">C</string>
     <string name="para">(  )</string>
     <string name="pou">%</string>
